@@ -20,35 +20,33 @@ class Scratch {
 
     // LC1326
     public int minTaps(int n, int[] ranges) {
-        List<int[]> intvs = new ArrayList<>();
+        TreeMap<Integer, Integer> tm = new TreeMap<>();
         for (int i = 0; i <= n; i++) {
-            intvs.add(new int[]{i - ranges[i], i + ranges[i]});
+            tm.put(i - ranges[i], Math.max(tm.getOrDefault(i - ranges[i], Integer.MIN_VALUE), i + ranges[i]));
         }
-        Collections.sort(intvs, (o1, o2) -> o1[0] == o2[0] ? o2[1] - o1[1] : o1[0] - o2[0]);
-        TreeSet<int[]> ts = new TreeSet<>(Comparator.comparingInt(o -> o[0]));
-        for (int[] i : intvs) ts.add(i);
         int result = Integer.MAX_VALUE;
-        loop: for (int[] i : intvs) { // 从i开始
-            if (i[0] > 0) break;
-            List<int[]> accepted = new ArrayList<>();
-            accepted.add(i);
-            while (accepted.get(accepted.size() - 1)[1] < n) {
-                int[] last = accepted.get(accepted.size() - 1);
-                NavigableSet<int[]> intersect = ts.subSet(new int[]{last[0], 0}, false, new int[]{last[1], 0}, true);
+        loop:
+        for (Map.Entry<Integer, Integer> i : tm.entrySet()) { // 从i开始
+            if (i.getKey() > 0) break;
+            LinkedList<Map.Entry<Integer, Integer>> candidateQueue = new LinkedList<>();
+            candidateQueue.add(i);
+            while (candidateQueue.getLast().getValue() < n) {
+                Map.Entry<Integer, Integer> last = candidateQueue.getLast();
+                NavigableMap<Integer, Integer> intersect = tm.subMap(last.getKey(), false, last.getValue(), true);
                 if (intersect.isEmpty()) break loop;
-                int[] candidate = null;
-                int rightMost = last[1];
-                for (int[] j : intersect) {
-                    if (j[1] > rightMost) {
+                Map.Entry<Integer, Integer> candidate = null;
+                int rightMost = last.getValue();
+                for (Map.Entry<Integer, Integer> j : intersect.entrySet()) {
+                    if (j.getValue() > rightMost) {
                         candidate = j;
-                        rightMost = j[1];
+                        rightMost = j.getValue();
                     }
                 }
                 if (candidate == null) break;
-                accepted.add(candidate);
+                candidateQueue.add(candidate);
             }
-            if (accepted.get(accepted.size() - 1)[1] < n) break;
-            result = Math.min(result, accepted.size());
+            if (candidateQueue.getLast().getValue() < n) break;
+            result = Math.min(result, candidateQueue.size());
             if (result == 1) return 1;
         }
         return result == Integer.MAX_VALUE ? -1 : result;
